# mycelium-relay

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.relay  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASING.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: android-release-play.yml  ci.yml  codeql.yml  dependency-review.yml  deploy.yml  desktop-release.yml  secret-scan.yml
android/: Makefile  README.md  build.gradle.kts  build.sh  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/network/mycelium/app/: MeshServiceInstrumentationTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/network/mycelium/app/: MainActivity.kt  MeshService.kt  MyceliumApplication.kt
android/app/src/main/java/network/mycelium/app/ui/: BulletinScreen.kt  ChatConversationScreen.kt  ChatScreen.kt  MailScreen.kt  PeersScreen.kt  SettingsScreen.kt  WalletScreen.kt
android/app/src/main/java/network/mycelium/app/viewmodel/: BulletinViewModel.kt  ChatViewModel.kt  MailViewModel.kt  WalletViewModel.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-ar/: strings.xml
android/app/src/main/res/values-de/: strings.xml
android/app/src/main/res/values-fa/: strings.xml
android/app/src/main/res/values-ru/: strings.xml
android/app/src/main/res/values-zh-rCN/: strings.xml
android/app/src/test/java/network/mycelium/app/: PeersScreenParserTest.kt
android/uniffi-bindings/: build.gradle.kts
android/uniffi-bindings/src/main/kotlin/network/mycelium/bindings/: MyceliumBindings.kt
android/uniffi-bindings/src/main/kotlin/uniffi/mycelium/: mycelium.kt
android/whatsnew/en-US/: whatsnew
config/: raspberry-pi.toml
crates/miniapp-sdk/: Cargo.toml
crates/miniapp-sdk/src/: main.rs
crates/mycelium-app/: Cargo.toml
crates/mycelium-app/assets/miniapp/: bundled_listings.json  bundled_revocations.json
crates/mycelium-app/assets/miniapp/bundles/: meshaid.mxa  meshmarket.mxa  proximity.mxa
crates/mycelium-app/src/: api.rs  contacts.rs  contacts_tests.rs  envelope.rs  groups.rs  lib.rs  miniapp_storage_enc.rs  node.rs  notify.rs  scope_key.rs  storage.rs
crates/mycelium-app/src/miniapp/: bridge_api.js  bridge_host.rs  bridge_limits.rs  bridge_session.rs  bundle.rs  bundle_scan.rs  bundle_signature.rs  bundled_listings.rs  capability_token.rs  csp.rs  install_policy.rs  manifest.rs  miniapp_security_tests.rs  mod.rs  policy.rs  prefs.rs  reproducible_build.rs  reputation.rs  revocation.rs  safe_mode.rs  storage_quota.rs  store.rs
crates/mycelium-app/src/proximity/: matcher.rs  matches.rs  mod.rs  presence.rs  store.rs  tests.rs
crates/mycelium-cli/: Cargo.toml
crates/mycelium-cli/src/: main.rs
crates/mycelium-coin/: Cargo.toml
crates/mycelium-coin/src/: address.rs  hot_wallet.rs  ledger.rs  lib.rs  node.rs  payload.rs  payment.rs  refill.rs  settlement_policy.rs  velocity.rs
crates/mycelium-core/: Cargo.toml
crates/mycelium-core/src/: at_rest.rs  bootstrap.rs  crypto.rs  data.rs  e2e_direct_wrap.rs  energy.rs  identity.rs  invite.rs  lib.rs  relay_status.rs  rendezvous.rs  sync.rs  transport.rs
crates/mycelium-desktop/: Cargo.toml  build.rs  tauri.conf.json
crates/mycelium-desktop/src/: lib.rs  main.rs
crates/mycelium-desktop/ui/: index.html  package-lock.json  package.json  vite.config.js
crates/mycelium-desktop/ui/src/: App.svelte  main.js
crates/mycelium-desktop/ui/src/components/: ConnectionStatus.svelte
crates/mycelium-desktop/ui/src/views/: Bulletin.svelte  Chat.svelte  Groups.svelte  Mail.svelte  MiniApp.svelte  MiniAppStore.svelte  Peers.svelte  Settings.svelte  Setup.svelte  Wallet.svelte
crates/mycelium-ffi/: Cargo.toml  build.rs
crates/mycelium-ffi/src/: lib.rs  mycelium.udl
crates/mycelium-node/: Cargo.toml
crates/mycelium-node/src/: behaviour.rs  connectivity.rs  forwarding.rs  ingest_guard.rs  lib.rs  node.rs  secrets.rs  security.rs  storage.rs  transport.rs
crates/mycelium-node/tests/: e2e_encrypted_envelope.rs  encrypted_direct_signature.rs  kad_discovery.rs  peer_cap.rs  relay_key_rotation.rs  sd030_unsigned_drop.rs  sd031_relay_fanout.rs  secrets_at_rest.rs  sync_bloom.rs
crates/mycelium-relay/: Cargo.toml
crates/mycelium-relay/src/: main.rs
crates/mycelium-sim/: Cargo.toml
crates/mycelium-sim/src/: clock.rs  lib.rs  runner.rs  scenarios.rs  scheduler.rs  transport.rs
deploy/relay/: README.md  fly.toml
docker/android-ci/: Dockerfile
docker/mycelium-relay/: Dockerfile
docs/: ECOSYSTEM.md  SECURITY.md  android-store-listing.md  architecture.md  mvp-smoke-test.md  network-hardening.md  research-notes.md
miniapps/test-xss/: index.html  mycelium-app.json
scripts/: add-spdx-headers.py  deploy-relay-fly.sh  setup-raspberry-pi.sh
