[workspace]
members = [
  "crates/mycelium-core",
  "crates/mycelium-node",
  "crates/mycelium-app",
  "crates/mycelium-coin",
  "crates/mycelium-ffi",
  "crates/mycelium-cli",
  "crates/mycelium-desktop",
  "crates/mycelium-sim",
  "crates/mycelium-relay",
  "crates/miniapp-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Mycelium Project"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1.3"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.56", features = [
  "tokio",
  "tcp",
  "quic",
  "noise",
  "yamux",
  "mdns",
  "gossipsub",
  "request-response",
  "cbor",
  "macros",
  "relay",
  "dcutr",
  "identify",
  "ping",
  "kad",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"
tempfile = "3"
urlencoding = "2"
zip = "0.6"
once_cell = "1"
chacha20poly1305 = "0.11"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
rand_core = "0.6"
zeroize = "1"
