[package]
name = "mycelium-coin"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
blake3.workspace = true
bs58.workspace = true
libp2p.workspace = true
mycelium-core = { path = "../mycelium-core" }
mycelium-node = { path = "../mycelium-node" }
serde.workspace = true
sled.workspace = true
tokio.workspace = true
tracing.workspace = true
urlencoding.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
