[package]
name = "mycelium-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dev-dependencies]
tempfile = "3"

[dependencies]
keyring = "3"
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
hkdf.workspace = true
libp2p.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
sha2.workspace = true
tracing.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
