[package]
name = "mycelium-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
mycelium-core = { path = "../mycelium-core" }
mycelium-node = { path = "../mycelium-node" }
mycelium-app = { path = "../mycelium-app" }
mycelium-coin = { path = "../mycelium-coin" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-android = "0.2"
uniffi = { version = "0.28", features = ["build", "bindgen", "cli"] }
serde_json.workspace = true
once_cell = "1"
uuid.workspace = true

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
