[package]
name = "mycelium-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "uniffi_mycelium"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
mycelium-core = { path = "../mycelium-core" }
mycelium-node = { path = "../mycelium-node" }
mycelium-app = { path = "../mycelium-app" }
mycelium-coin = { path = "../mycelium-coin" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-android = "0.2"
uniffi = { version = "0.28", features = ["build", "bindgen", "cli"] }
serde_json.workspace = true
once_cell = "1"
uuid.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["std"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
