[package]
name = "mycelium-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
blake3.workspace = true
futures.workspace = true
libp2p.workspace = true
mycelium-core = { path = "../mycelium-core" }
serde.workspace = true
serde_json.workspace = true
sled.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
