[package]
name = "mycelium-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Minimal public libp2p relay for Mycelium bootstrap / hole punching."

[[bin]]
name = "mycelium-relay"

[dependencies]
anyhow.workspace = true
axum = "0.7"
clap.workspace = true
libp2p = { version = "0.56", features = [
  "tokio",
  "tcp",
  "quic",
  "noise",
  "yamux",
  "relay",
  "identify",
  "ping",
  "macros",
  "kad",
] }
mycelium-core = { path = "../mycelium-core" }
mycelium-node = { path = "../mycelium-node" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
