[package]
name = "mycelium-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
mycelium-core = { path = "../mycelium-core" }
mycelium-node = { path = "../mycelium-node" }
tokio.workspace = true
libp2p.workspace = true

[dev-dependencies]
tempfile = "3"
